Attempt to fix overflow attribute being overridden

--- a/src/static/stylesheets/file_browser.scss
+++ b/src/static/stylesheets/file_browser.scss
@@ -23,12 +23,15 @@ $preview-background: rgba(0, 0, 0, 0.5);
   display: flex;
 }
 
-.file-browser {
+.file-browser-container {
   font-weight: 300;
   margin: $elv-spacing-s 0;
   max-height: 50vh;
-  overflow-y: auto;
   width: 100%;
+
+  &.file-browser-container {
+    overflow-y: auto;
+  }
 
   table {
     border: 1px solid $elv-color-lightgray;
